2007-05-22  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlsource.c: (gnl_source_init):
	Use 'async-handling' property if available so our state change happens
	correctly with latest core modifications.

2007-05-22  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (get_new_seek_event),
	(get_current_position), (gnl_composition_event_handler),
	(refine_start_stop_in_region_above_priority),
	(convert_list_to_tree), (get_stack_list),
	(get_clean_toplevel_stack), (are_same_stacks), (update_pipeline),
	(gnl_composition_add_object):
	* gnl/gnlobject.c: (translate_incoming_seek):
	* gnl/gnlobject.h:
	Allow adding objects in a composition WHILE playing.
	Fixes #437105

2007-05-05  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	Back to development cycle.

=== release 0.10.8 ===

2007-05-05  Edward Hervey <edward@fluendo.com>

	* configure.ac:
	* NEWS:
	* RELEASE:
	  releasing 0.10.8, "Half a kilo of power points"

2007-05-03  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	0.10.7.2 pre-release

2007-05-02  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlobject.h:
	priority is a guint32 !
	* gnl/gnlcomposition.c: (priority_comp), (objects_start_compare),
	(objects_stop_compare), (object_start_changed),
	(object_stop_changed), (object_priority_changed),
	(object_active_changed):
	Fix major stupidity in GCompareFunc, the difference between 2 guint32
	is not guaranteed to be correct within a gint :)
	Fixes #435215

2007-04-12  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlobject.c: (gnl_object_remove_ghost_pad):
	Don't forget to unset the target when removing a ghost pad, else the
	target will still be linked to the no-longer-present-ghostpad internal
	pad.
	This is the "+500 power points" Jokosher bugfix.

2007-02-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  adapt to new AG_GST

2007-02-19  Wim Taymans  <wim@fluendo.com>

	* gnl/gnlcomposition.c: (no_more_pads_object_cb),